--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,8 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: npm install netlify-cli -g
+      - run: echo $NETLIFY_SITE_ID
+      - run: echo $NETLIFY_AUTH_TOKEN
       - run: yarn install
 
       - save_cache:
