--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,10 @@ jobs:
             - v1-dependencies-
 
       - run: yarn install
-      - run: yarn build
+      - run:
+          name: 'build vue'
+          command: yarn build
+          command: cp index.html dist
 
       - save_cache:
           paths:
