--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod"
   },
   "dependencies": {
+    "bootstrap": "3.3.7",
     "vue": "^2.5.11"
   },
   "browserslist": [
